--- a/MyFirstWebApp/MyFirstWebApp/Views/Shared/_Layout.cshtml
+++ b/MyFirstWebApp/MyFirstWebApp/Views/Shared/_Layout.cshtml
@@ -28,6 +28,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-black-50" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-black-50" asp-area="" asp-controller="Home" asp-action="Numbers" asp-route-id="10">Nums 1..10</a>
+                        </li>
                     </ul>
                 </div>
             </div>
